added new classes for all titles on all pages/blocks since  style selector has been rewritten to a class instead of a tag

--- a/files for admin/careers.phtml
+++ b/files for admin/careers.phtml
@@ -1,13 +1,13 @@
 <div class="careers-page">
     <div class="careers-page__intro ">
         <div class="careers-page__container _container _grid-3-col">
-            <h2 class="careers-page__title _page-title ">
+            <h2 class="h2 careers-page__title _page-title ">
                 <p>Want to be part</p>
                 <p>
                     of our <span class="_page-title--orange">magento</span> team?
                 </p>
             </h2>
-            <h4 class="careers-page__sub-title _page-sub-title">The most important thing is the atmosphere in the team. For us, this is a state of constant development and growth, as well as family values, where everyone is friendly, caring and easy to communicate with.</h4>
+            <h4 class="h4 careers-page__sub-title _page-sub-title">The most important thing is the atmosphere in the team. For us, this is a state of constant development and growth, as well as family values, where everyone is friendly, caring and easy to communicate with.</h4>
         </div>
     </div>
 
@@ -18,9 +18,9 @@
             <div class="careers-section__section-label _section-label">Meet Our Team</div>
 
             <div class="careers-section__col">
-                <h3 class="careers-section__title">who we are</h3>
-                <h5 class="careers-section__text">Perspective is a Ukrainian, Magento-oriented team, with a bias towards the technical component of projects. We are represented in 4 cities: Kiev, Uzhgorod, Krivoy Rog and Shostka. </h5>
-                <h5 class="careers-section__text">Our clients are 70% Western companies (Europe and the USA) and 30% Ukrainian companies. Our goal is to be the best Magento experts.</h5>
+                <h3 class="h3 careers-section__title">who we are</h3>
+                <h5 class="h5 careers-section__text">Perspective is a Ukrainian, Magento-oriented team, with a bias towards the technical component of projects. We are represented in 4 cities: Kiev, Uzhgorod, Krivoy Rog and Shostka. </h5>
+                <h5 class="h5 careers-section__text">Our clients are 70% Western companies (Europe and the USA) and 30% Ukrainian companies. Our goal is to be the best Magento experts.</h5>
             </div>
 
             <div class="careers-section__col">
@@ -50,8 +50,8 @@
         <div class="careers-section__container _container  _grid-3-col">
             <div class="careers-section__section-label _section-label">Benefits</div>
             <div class="careers-section__cell">
-                <h3 class="careers-section__title">What we offer</h3>
-                <h5 class="careers-section__text">The most important thing is the atmosphere in the team. For us, this is a state of constant development and growth, as well as family values, where everyone is friendly, caring and easy to communicate with.</h5>
+                <h3 class="h3 careers-section__title">What we offer</h3>
+                <h5 class="h5 careers-section__text">The most important thing is the atmosphere in the team. For us, this is a state of constant development and growth, as well as family values, where everyone is friendly, caring and easy to communicate with.</h5>
 
                 <div class="_h4">Magento expertise</div>
                 <ul class="careers-section__list _list">
@@ -105,7 +105,7 @@
         <div class="careers-section__container _container  _grid-2-col">
             <div class="careers-section__section-label _section-label">Join us!</div>
             <div class="careers-section__content">
-                <h3 class="careers-section__title">We are <br /> looking for</h3>
+                <h3 class="h3 careers-section__title">We are <br /> looking for</h3>
 
                 <div class="careers-section__collapsible careers-collapsible" x-data="{selected:null}">
                     <!-- 1 -->
@@ -118,7 +118,7 @@
                              @click="selected !== 1 ? selected = 1 : selected = null"
                         >
                             <div class="careers-collapsible__header">
-                                <h4 class="careers-collapsible__title">Business Development Manager</h4>
+                                <h4 class="h4 careers-collapsible__title">Business Development Manager</h4>
                                 <p class="careers-collapsible__locate">Kyiv</p>
                             </div>
                             <span class="careers-collapsible__plus-sign"></span>
@@ -132,7 +132,7 @@
                     >
                         <div class="careers-collapsible__content">
                             <div class="careers-collapsible__col">
-                                <h5 class="careers-collapsible__text">Looking for a high-performing and self-motivated individual, to help us meet our customer acquisition and revenue growth targets. Will be responsible for maximizing our sales team potential, crafting sales plans. Our perfect candidate will try to understand all the business challenges of his potential client and he knows that he is not selling technical specialists, but offers comprehensive solutions for his partners.</h5>
+                                <h5 class="h5 careers-collapsible__text">Looking for a high-performing and self-motivated individual, to help us meet our customer acquisition and revenue growth targets. Will be responsible for maximizing our sales team potential, crafting sales plans. Our perfect candidate will try to understand all the business challenges of his potential client and he knows that he is not selling technical specialists, but offers comprehensive solutions for his partners.</h5>
                                 <a href="#footer-alt" class="_scrollTo careers-collapsible__button careers-collapsible__button--desktop _button _button--orange-bg" style="width:fit-content;">
                                     <span class="_button__text">Send your CV</span>
                                     <span class="_button__overlay _button__overlay--hover"></span>
@@ -141,7 +141,7 @@
                             </div>
 
                             <div class="careers-collapsible__col">
-                                <h5 class="careers-collapsible__list-legend">Main Responsibilities :</h5>
+                                <h5 class="h5 careers-collapsible__list-legend">Main Responsibilities :</h5>
                                 <ul class="careers-collapsible__list _list">
                                     <li>Creating strategies for sales growth in alignment to company’s goals</li>
                                     <li>The medium and large-sized enterprise client acquisition</li>
@@ -152,7 +152,7 @@
                                     <li>Representing company at various exhibition and trade fairs</li>
                                 </ul>
 
-                                <h5 class="careers-collapsible__list-legend">Skills Required:</h5>
+                                <h5 class="h5 careers-collapsible__list-legend">Skills Required:</h5>
                                 <ul class="careers-collapsible__list _list">
                                     <li>At least 3+ years with similar experience in the IT industry</li>
                                     <li>Proven track record of exceeding quotas of $100k in signings or more</li>
@@ -186,7 +186,7 @@
                              @click="selected !== 2 ? selected = 2 : selected = null"
                         >
                             <div class="careers-collapsible__header">
-                                <h4 class="careers-collapsible__title">Business Analyst</h4>
+                                <h4 class="h4 careers-collapsible__title">Business Analyst</h4>
                                 <p class="careers-collapsible__locate">Kyiv</p>
                             </div>
                             <span class="careers-collapsible__plus-sign"></span>
@@ -200,7 +200,7 @@
                     >
                         <div class="careers-collapsible__content">
                             <div class="careers-collapsible__col">
-                                <h5 class="careers-collapsible__text">
+                                <h5 class="h5 careers-collapsible__text">
                                     Our team specializes in an integrated approach to web development and graphics services. The key area of ​​e-commerce. We are also growing in search of a new motivated and purposeful Business Analyst that will join our best Magento Team.
                                 </h5>
                                 <a href="#footer-alt" class="_scrollTo careers-collapsible__button careers-collapsible__button--desktop _button _button--orange-bg" style="width:fit-content;">
@@ -211,7 +211,7 @@
                             </div>
 
                             <div class="careers-collapsible__col">
-                                <h5 class="careers-collapsible__list-legend">Responsibilities:</h5>
+                                <h5 class="h5 careers-collapsible__list-legend">Responsibilities:</h5>
                                 <ul class="careers-collapsible__list _list">
                                     <li>identify product requirements and business needs from the scratch;</li>
                                     <li>evaluation of business processes, the anticipation of requirements, identification of areas for improvement, development, and implementation of solutions;</li>
@@ -221,7 +221,7 @@
                                     <li>monitoring results and ensuring timely completion of projects.</li>
                                 </ul>
 
-                                <h5 class="careers-collapsible__list-legend">Required skills:</h5>
+                                <h5 class="h5 careers-collapsible__list-legend">Required skills:</h5>
                                 <ul class="careers-collapsible__list _list">
                                     <li>1,5 years of experience in BA;</li>
                                     <li>work experience with clients from the USA, Great Britain, or Europe;</li>
@@ -230,12 +230,12 @@
                                     <li>Upper-Intermediate or higher English level.</li>
                                 </ul>
 
-                                <h5 class="careers-collapsible__list-legend">Will be an advantage:</h5>
+                                <h5 class="h5 careers-collapsible__list-legend">Will be an advantage:</h5>
                                 <ul class="careers-collapsible__list _list">
                                     <li>experience in web design/e-commerce/software development.</li>
                                 </ul>
 
-                                <h5 class="careers-collapsible__list-legend">Requirements for personal qualities:</h5>
+                                <h5 class="h5 careers-collapsible__list-legend">Requirements for personal qualities:</h5>
                                 <ul class="careers-collapsible__list _list">
                                     <li>the ability to keep your work organized;</li>
                                     <li>punctuality and responsibility;</li>
@@ -264,7 +264,7 @@
                              @click="selected !== 3 ? selected = 3 : selected = null"
                         >
                             <div class="careers-collapsible__header">
-                                <h4 class="careers-collapsible__title">Project Manager</h4>
+                                <h4 class="h4 careers-collapsible__title">Project Manager</h4>
                                 <p class="careers-collapsible__locate">Kyiv</p>
                             </div>
                             <span class="careers-collapsible__plus-sign"></span>
@@ -278,7 +278,7 @@
                     >
                         <div class="careers-collapsible__content">
                             <div class="careers-collapsible__col">
-                                <h5 class="careers-collapsible__text">
+                                <h5 class="h5 careers-collapsible__text">
                                     Our team specializes in an integrated approach to web development and graphics services. The key area of ​​e-commerce. We are also growing in search of a new motivated and purposeful PM that will join our best Magento Team.
                                 </h5>
                                 <a href="#footer-alt" class="_scrollTo careers-collapsible__button careers-collapsible__button--desktop _button _button--orange-bg" style="width:fit-content;">
@@ -289,7 +289,7 @@
                             </div>
 
                             <div class="careers-collapsible__col">
-                                <h5 class="careers-collapsible__list-legend">Responsibilities:</h5>
+                                <h5 class="h5 careers-collapsible__list-legend">Responsibilities:</h5>
                                 <ul class="careers-collapsible__list _list">
                                     <li>communication with stakeholders to identify the business needs;</li>
                                     <li>writing technical documentation for the project;</li>
@@ -302,7 +302,7 @@
                                     <li>participation in the delivery of the product to production environment.</li>
                                 </ul>
 
-                                <h5 class="careers-collapsible__list-legend">Required skills:</h5>
+                                <h5 class="h5 careers-collapsible__list-legend">Required skills:</h5>
                                 <ul class="careers-collapsible__list _list">
                                     <li>1,5 years of experience in PM or BA;</li>
                                     <li>understanding the website development process/staging;</li>
@@ -310,12 +310,12 @@
                                     <li>Upper-Intermediate or higher English level.</li>
                                 </ul>
 
-                                <h5 class="careers-collapsible__list-legend">Will be an advantage:</h5>
+                                <h5 class="h5 careers-collapsible__list-legend">Will be an advantage:</h5>
                                 <ul class="careers-collapsible__list _list">
                                     <li>experience in similar positions in similar companies.</li>
                                 </ul>
 
-                                <h5 class="careers-collapsible__list-legend">Requirements for personal qualities:</h5>
+                                <h5 class="h5 careers-collapsible__list-legend">Requirements for personal qualities:</h5>
                                 <ul class="careers-collapsible__list _list">
                                     <li>the ability to keep your work organized;</li>
                                     <li>punctuality and responsibility;</li>
@@ -344,7 +344,7 @@
                              @click="selected !== 4 ? selected = 4 : selected = null"
                         >
                             <div class="careers-collapsible__header">
-                                <h4 class="careers-collapsible__title">Magento BackEnd Developer</h4>
+                                <h4 class="h4 careers-collapsible__title">Magento BackEnd Developer</h4>
                                 <p class="careers-collapsible__locate">Uzhhorod, Shostka, Kryvyi Rih, Cherkasy</p>
                             </div>
                             <span class="careers-collapsible__plus-sign"></span>
@@ -358,7 +358,7 @@
                     >
                         <div class="careers-collapsible__content">
                             <div class="careers-collapsible__col">
-                                <h5 class="careers-collapsible__text">
+                                <h5 class="h5 careers-collapsible__text">
                                     Our team specializes in an integrated approach to web development and graphics services. The key area of ​​e-commerce. We are also growing in search of a new motivated and purposeful BackEnd Developer that will join our best Magento Team.
                                 </h5>
                                 <a href="#footer-alt" class="_scrollTo careers-collapsible__button careers-collapsible__button--desktop _button _button--orange-bg" style="width:fit-content;">
@@ -369,13 +369,13 @@
                             </div>
 
                             <div class="careers-collapsible__col">
-                                <h5 class="careers-collapsible__list-legend">Approximate responsibilities:</h5>
+                                <h5 class="h5 careers-collapsible__list-legend">Approximate responsibilities:</h5>
                                 <ul class="careers-collapsible__list _list">
                                     <li>websites development on Magento from scratch;</li>
                                     <li>finalization of existing sites on Magento.</li>
                                 </ul>
 
-                                <h5 class="careers-collapsible__list-legend">Required skills:</h5>
+                                <h5 class="h5 careers-collapsible__list-legend">Required skills:</h5>
                                 <ul class="careers-collapsible__list _list">
                                     <li>1,5−2 years of development experience with Magento;</li>
                                     <li>PHP, SQL – high level;</li>
@@ -384,14 +384,14 @@
                                     <li>understanding of the whole web development process.</li>
                                 </ul>
 
-                                <h5 class="careers-collapsible__list-legend">Will be an advantage:</h5>
+                                <h5 class="h5 careers-collapsible__list-legend">Will be an advantage:</h5>
                                 <ul class="careers-collapsible__list _list">
                                     <li>Pre-intermediate or higher English level;</li>
                                     <li>Zend Framework;</li>
                                     <li>NoSQL, jQuery, Git.</li>
                                 </ul>
 
-                                <h5 class="careers-collapsible__list-legend">Requirements for personal qualities:</h5>
+                                <h5 class="h5 careers-collapsible__list-legend">Requirements for personal qualities:</h5>
                                 <ul class="careers-collapsible__list _list">
                                     <li>the ability to keep your work in a structured form;</li>
                                     <li>the ability to plan and evaluate your tasks.</li>
