--- a/files for admin/company.phtml
+++ b/files for admin/company.phtml
@@ -1,14 +1,14 @@
 <div class="company-page" data-mage-init='{"slickCompanyPage" : {}, "companyPage" : {} }'>
     <div class="company-page__container _container">
         <div class="company-page__top">
-            <h2 class="company-page__title">We are a team of international experts united by a <span class="company-page__title--orange">single goal</span></h2>
-            <h4 class="company-page__sub-title _text-align-right">We help to make money on the Internet, as well as contributes to business development by introducing IT innovations into them.</h4>
+            <h2 class="h2 company-page__title">We are a team of international experts united by a <span class="company-page__title--orange">single goal</span></h2>
+            <h4 class="h4 company-page__sub-title _text-align-right">We help to make money on the Internet, as well as contributes to business development by introducing IT innovations into them.</h4>
             <div class="company-page__image">
                 <img loading="eager" src="{{media url='wysiwyg/company/background-about.png'}}" alt="sec">
             </div>
             <div class="company-page__squares company-squares">
                 <div class="company-squares__text _text-align-right">
-                    <h5>We are the Magento focused web-development company named Perspective Studio with HQ located in Kyiv, Ukraine with more than 67 employees. </h5>
+                    <h5 class="h5">We are the Magento focused web-development company named Perspective Studio with HQ located in Kyiv, Ukraine with more than 67 employees. </h5>
                 </div>
                 <div class="company-squares__square company-square company-square--fronts">
                     <div class="company-square__digit">10</div>
@@ -34,12 +34,12 @@
                 <div class="company-growth__label _section-label">Growth</div>
                 <div class="company-growth__content">
                     <div class="company-growth__top">
-                        <h5 class="company-growth__text">Our company was founded 11 years ago and we dealt with different CMS and Frameworks during that period but after some time we realized that we should have a strong aim to develop ourselves in one thing, mastering skills in a narrow field.</h5>
-                        <h5 class="company-growth__text _text-align-right">Perspective Studio has seen constant annual growth and success each year since inception. We have at the moment four offices in Kyiv, Uzhgorod, Shostka, Cherkasy and Kriviy Rig. </h5>
+                        <h5 class="h5 company-growth__text">Our company was founded 11 years ago and we dealt with different CMS and Frameworks during that period but after some time we realized that we should have a strong aim to develop ourselves in one thing, mastering skills in a narrow field.</h5>
+                        <h5 class="h5 company-growth__text _text-align-right">Perspective Studio has seen constant annual growth and success each year since inception. We have at the moment four offices in Kyiv, Uzhgorod, Shostka, Cherkasy and Kriviy Rig. </h5>
                     </div>
 
                     <div class="company-growth__bottom">
-                        <h3 class="company-growth__title">Our aim is to become <span class="company-growth__title--orange">the Best</span> Magento Team ever</h3>
+                        <h3 class="h3 company-growth__title">Our aim is to become <span class="company-growth__title--orange">the Best</span> Magento Team ever</h3>
                         <div class="company-growth__image company-map-image" data-mage-init='{"companyImageAnimation" : {}}'>
                             <div class="company-map-image__container">
                                 <div class="highlight" style="width:100%">
@@ -74,8 +74,8 @@
             <div class="company-team__body _grid-2-col">
                 <div class="company-team__label _section-label">Meet Our Team</div>
                 <div class="company-team__content">
-                    <h3 class="company-team__title">Key persons of the company</h3>
-                    <h5 class="company-team__sub-title _text-align-right">Experts in their respective fields and a truly stellar team of executives that work hard every day to ensure that the Сompany offers the best services in industry. Team growth and implementation of best practices is what the guys do every day.</h5>
+                    <h3 class="h3 company-team__title">Key persons of the company</h3>
+                    <h5 class="h5 company-team__sub-title _text-align-right">Experts in their respective fields and a truly stellar team of executives that work hard every day to ensure that the Сompany offers the best services in industry. Team growth and implementation of best practices is what the guys do every day.</h5>
                     <div class="company-team__gallery team-gallery">
                         <div class="team-gallery__col">
                             <div class="team-gallery__person" data-container-pos="1">
@@ -155,7 +155,7 @@
 
         <section class="company-page__gallery company-gallery">
             <div class="company-gallery__body _grid-2-col">
-                <h3 class="company-gallery__title">
+                <h3 class="h3 company-gallery__title">
                     We are like <span class="company-gallery__title--orange">a family</span> with common goals, <span class="company-gallery__title--orange">a team</span> of like-minded people driven by <span class="company-gallery__title--orange">passion to what we do</span>
                 </h3>
                 <div class="company-gallery__image company-gallery__image--panorama">
@@ -171,13 +171,13 @@
                         </div>
 
                         <a href="#footer-alt" class="gallery-photos__button _button _button--orange-bg _button--arrow _scrollTo">
-                            <h5 class="_button__text">Join the team</h5>
+                            <h5 class="h5 _button__text">Join the team</h5>
                             <span class="_button__overlay _button__overlay--hover"></span>
                             <span class="_button__overlay _button__overlay--active"></span>
                         </a>
                     </div>
                     <div class="gallery-photos__col ">
-                        <h5 class="gallery-photos__sub-title _text-align-right">Sure, we know how to work together, but we also know how to play together. This helps build strong relationships, amazing projects and an environment that puts people first—and they know it.</h5>
+                        <h5 class="h5 gallery-photos__sub-title _text-align-right">Sure, we know how to work together, but we also know how to play together. This helps build strong relationships, amazing projects and an environment that puts people first—and they know it.</h5>
                         <div class="gallery-photos__item">
                             <img loading="lazy" src="{{media url='wysiwyg/company/4.png' }}" alt="four">
                         </div>
@@ -198,8 +198,8 @@
             <div class="company-pets__body _grid-2-col">
                 <div class="company-pets__label _section-label">Pet-friendly</div>
                 <div class="company-pets__content">
-                    <h3 class="company-pets__title">Man’s Best Friends at Work</h3>
-                    <h5 class="company-pets__sub-title _text-align-right">We realize how beneficial and important a pet-friendly office is for our employees. Pets in the workplace have a way of bringing people together, critical for being both interactive and productive. </h5>
+                    <h3 class="h3 company-pets__title">Man’s Best Friends at Work</h3>
+                    <h5 class="h5 company-pets__sub-title _text-align-right">We realize how beneficial and important a pet-friendly office is for our employees. Pets in the workplace have a way of bringing people together, critical for being both interactive and productive. </h5>
                     <div class="company-pets__gallery pets-gallery">
                         <div class="pets-gallery__col">
                             <div class="pets-gallery__image">
