--- a/files for admin/footer_info_block.phtml
+++ b/files for admin/footer_info_block.phtml
@@ -1,6 +1,6 @@
 <div class="footer__info footer-info ">
-    <h5 class="footer-info__title">Become a Client</h5>
-    <h5 class="footer-info__text footer-info__text--contacts">
+    <h5 class="h5 footer-info__title">Become a Client</h5>
+    <h5 class="h5 footer-info__text footer-info__text--contacts">
         <p>
             <a href="tel:+1 312-239-0843" class="footer-info__phone ">+1 312-239-0843</a>
         </p>
@@ -8,14 +8,22 @@
             <a href="mailto:order@perspectiveteam.com" class="footer-info__email ">order@perspectiveteam.com</a>
         </p>
     </h5>
-    <h5 class="footer-info__title ">Find us</h5>
-    <h5 class="footer-info__text">
-        <p class="footer-info__address">Kyiv, 28 Mezhyhirska str, office 19</p>
+    <h5 class="h5 footer-info__title ">Find us</h5>
+    <h5 class="h5 footer-info__text">
+        <p class="footer-info__address">Kyiv, 15a Tumaniana</p>
         <p class="footer-info__site">perspectiveteam.com</p>
     </h5>
-    <h5 class="footer-info__title ">Follow us</h5>
+    <h5 class="h5 footer-info__title ">Follow us</h5>
     <div class="footer-info__links">
-        <a target="_blank" href="https://www.facebook.com/perspective.magento.team/" class="footer-info__link footer-info__link--fb"></a>
-        <a target="_blank" href="https://www.linkedin.com/company/perspective-magento-team" class="footer-info__link footer-info__link--ln"></a>
+        <a target="_blank" 
+           href="https://www.facebook.com/perspective.magento.team/" 
+           class="footer-info__link footer-info__link--fb"
+           aria-label="Follow us on Facebook"
+        ></a>
+        <a target="_blank" 
+           href="https://www.linkedin.com/company/perspective-magento-team" 
+           class="footer-info__link footer-info__link--ln"
+           aria-label="Follow us on LinkedIn"
+        ></a>
     </div>
 </div>
