--- a/files for admin/services.phtml
+++ b/files for admin/services.phtml
@@ -1,7 +1,7 @@
 <div class="services-page" data-mage-init='{"servicepage":{}}'>
     <div class="services-page__container _container">
         <div class="service-page__top _grid-3-col">
-            <h2 class="services-page__title _sliding-text">
+            <h2 class="h2 services-page__title _sliding-text">
                 <span class="_sliding-text__line">We are a team <br /> </span>
                 <span class="_sliding-text__line">of international experts</span>
                 <span class="_sliding-text__line">
@@ -9,7 +9,7 @@
                     <span class="services-page__title services-page__title--orange">single goal</span>
                 </span>
             </h2>
-            <h4 class="services-page__sub-title ">We specialise in creating eCommerce websites. We focus on conversion in balance with your brand. Our websites are future proof, with a solid backend and easy to use content management system. We maintain, update, and support with on-going strategic recommendations from the minute you go-live.</h4>
+            <h4 class="h4 services-page__sub-title ">We specialise in creating eCommerce websites. We focus on conversion in balance with your brand. Our websites are future proof, with a solid backend and easy to use content management system. We maintain, update, and support with on-going strategic recommendations from the minute you go-live.</h4>
         </div>
 
         <div class="services-page__squares services-squares" data-mage-init='{"slickServicePage":{}}'>
@@ -43,7 +43,7 @@
             <div class="service-section__body _grid-3-col">
                 <div class="service-section__label _section-label">Design</div>
                 <div class="service-section__content">
-                    <h3 class="service-section__title">Web Design</h3>
+                    <h3 class="h3 service-section__title">Web Design</h3>
                     <p class="service-section__text"> The full cycle of services to create and launch a website from scratch or redesign a live website along with the modern trends and requirements.</p>
                     <p class=" service-section__text service-section__text--second-line">We will help you take your online store to the next level with our eCommerce design services. Contact us to learn more about how a good user experience and user interface can impact your online sales.</p>
                 </div>
@@ -60,7 +60,7 @@
                     <img loading="lazy" src="{{media url='wysiwyg/Service/Development.png'}}" alt="design-image ">
                 </div>
                 <div class="service-section__content">
-                    <h3 class="service-section__title">Magento Development </h3>
+                    <h3 class="h3 service-section__title">Magento Development </h3>
                     <p class="service-section__text">Magento is a complex platform and requires the right people to maintain it for it to be stable and flexible in the long run. We are here for that.</p>
                     <p class=" service-section__text service-section__text--second-line">Our Magento certified developers are trained to develop Magento stores with a long-term view on the functionality and maintainability in mind.</p>
                 </div>
@@ -71,7 +71,7 @@
             <div class="service-section__body _grid-3-col">
                 <div class="service-section__label _section-label">Migration</div>
                 <div class="service-section__content">
-                    <h3 class="service-section__title">Magento 2 <br> Migration</h3>
+                    <h3 class="h3 service-section__title">Magento 2 <br> Migration</h3>
                     <p class=" service-section__text">Magento 1 to Magento 2 migration process is perceived to be intimidating by some merchants, resulting in their postponing the procedure indefinitely. Plus, after years of using Magento 1 many grew attached to the familiar features and demonstrated robustness of the platform. </p>
                 </div>
                 <div class="service-section__image">
@@ -87,7 +87,7 @@
                     <img loading="lazy" src="{{media url='wysiwyg/Service/pwa.png'}}" alt="migration-image ">
                 </div>
                 <div class="service-section__content">
-                    <h3 class="service-section__title">Magento PWA</h3>
+                    <h3 class="h3 service-section__title">Magento PWA</h3>
                     <p class=" service-section__text">Empower your Magento by using Progressive Web Apps thus reaching lightning fast loading times, improved experience on mobile and much more. Our extensive experience with building Magento PWA stores will ensure your headless eCommerce store is ahead of the competition.</p>
                 </div>
             </div>
@@ -97,7 +97,7 @@
             <div class="service-section__body _grid-3-col">
                 <div class="service-section__label service-section__label--wide _section-label">Security audit</div>
                 <div class="service-section__content">
-                    <h3 class="service-section__title">Magento <br> Security Audit</h3>
+                    <h3 class="h3 service-section__title">Magento <br> Security Audit</h3>
                     <p class=" service-section__text">№1 eCommerce priority covered: be 100% sure the customers’ payment & private information is safe. We will make sure all security flaws won’t be a threat to your store.</p>
                     <ul class="service-section__list">
                         <li>Magento patches review</li>
@@ -118,7 +118,7 @@
                     <img loading="lazy" src="{{media url='wysiwyg/Service/support.png'}}" alt="support-image">
                 </div>
                 <div class="service-section__content">
-                    <h3 class="service-section__title">Magento Support</h3>
+                    <h3 class="h3 service-section__title">Magento Support</h3>
                     <p class=" service-section__text">We are an agency offering fully managed support and maintenance service for your business with 24/7 availability to ensure your online store improves and grows. Specialized in Magento and offering a vast spectrum of services, our support & maintenance offering is the perfect way to scale your online business.</p>
                     <p class=" service-section__text service-section__text--second-line">It does not matter if you are from the United States, Australia, China or Europe. We work with different sized eCommerce stores all over the globe.</p>
                 </div>
@@ -129,7 +129,7 @@
             <div class="service-section__body _grid-3-col">
                 <div class="service-section__label  _section-label">Optimization</div>
                 <div class="service-section__content">
-                    <h3 class="service-section__title">Server & Magento Optimization</h3>
+                    <h3 class="h3 service-section__title">Server & Magento Optimization</h3>
                     <p class=" service-section__text">Fix the low page load time & poor Core Web Vitals metrics for your business growth. Contact us to make the best out of the Magento performance with the help of Adobe certified experts.</p>
                     <ul class="service-section__list">
                         <li>Website code improvements</li>
@@ -150,7 +150,7 @@
                     <img src="{{media url='wysiwyg/Service/services-ga4.svg'}}" alt="analytics" />
                 </div>
                 <div class="service-section__content">
-                    <h3 class="service-section__title">Implementation Google Analytics 4</h3>
+                    <h3 class="h3 service-section__title">Implementation Google Analytics 4</h3>
                     <p class=" service-section__text">
                         If you are a Magento merchants selling products online and strive to attract new customers or improve your conversion rates, you definitely need Google Analytics 4. It is the instrument to gather as much information as possible about your customers behavior from your website since it is the only layer between your customers and your products.
                     </p>
