--- a/files for admin/works.phtml
+++ b/files for admin/works.phtml
@@ -1,7 +1,7 @@
 <div class="work-page">
     <div class="work-page__container _container">
-        <h2 class="work-page__title">best-in-class <br /> eCommerce solutions</h2>
-        <h4 class="work-page__sub-title">Our passion lies in making complex things simple. We design and build websites,<br /> e-commerce stores for some of the largest organisations in the world.</h4>
+        <h2 class="h2 work-page__title">best-in-class <br /> eCommerce solutions</h2>
+        <h4 class="h4 work-page__sub-title">Our passion lies in making complex things simple. We design and build websites,<br /> e-commerce stores for some of the largest organisations in the world.</h4>
 
         <a class="work-page__row" href="https://www.vodafone.ua/shop/" target="_blank">
             <div class="row__img work-page__image">
@@ -12,7 +12,7 @@
                     Vodafone
                     <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
                 </h4>
-                <h5>Online store of the leading mobile operator Vodafone Ukraine, which serves more than 19 million subscribers.</h5>
+                <h5 class="h5">Online store of the leading mobile operator Vodafone Ukraine, which serves more than 19 million subscribers.</h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
                 <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
@@ -27,7 +27,7 @@
                     Ortlieb
                     <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
                 </h4>
-                <h5>Online store of the the world’s leading brand of waterproof premium equipment.</h5>
+                <h5 class="h5">Online store of the the world’s leading brand of waterproof premium equipment.</h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
                 <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
@@ -42,7 +42,7 @@
                     Dr.Berg
                     <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
                 </h4>
-                <h5>Online store of the leading mobile operator Vodafone Ukraine, which serves more than 19 million subscribers.</h5>
+                <h5 class="h5">Online store of the leading mobile operator Vodafone Ukraine, which serves more than 19 million subscribers.</h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
                 <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
@@ -57,7 +57,7 @@
                     Tefal
                     <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
                 </h4>
-                <h5>official online store of the international brand under which household appliances and dishes are produced</h5>
+                <h5 class="h5">official online store of the international brand under which household appliances and dishes are produced</h5>
                 <p class="work-page__small-text">Design, development, integrations, support</p>
                 <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
@@ -72,7 +72,7 @@
                     Krups
                     <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
                 </h4>
-                <h5>Official online store of the international brand under which household appliances and dishes are produced</h5>
+                <h5 class="h5">Official online store of the international brand under which household appliances and dishes are produced</h5>
                 <p class="work-page__small-text">Design, development, integrations, support</p>
                 <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
@@ -87,7 +87,7 @@
                     Soundmag
                     <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
                 </h4>
-                <h5>Online store and the first salon of personal audio</h5>
+                <h5 class="h5">Online store and the first salon of personal audio</h5>
                 <p class="work-page__small-text">Design, development, integrations, support</p>
                 <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
@@ -102,7 +102,7 @@
                     WMF
                     <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
                 </h4>
-                <h5>Online store of the leading mobile operator Vodafone Ukraine, which serves more than 19 million subscribers.</h5>
+                <h5 class="h5">Online store of the leading mobile operator Vodafone Ukraine, which serves more than 19 million subscribers.</h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
                 <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
@@ -117,7 +117,7 @@
                     Rowenta
                     <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
                 </h4>
-                <h5>Online store of the the world’s leading brand of waterproof premium equipment.</h5>
+                <h5 class="h5">Online store of the the world’s leading brand of waterproof premium equipment.</h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
                 <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
@@ -132,7 +132,7 @@
                     Chicco
                     <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
                 </h4>
-                <h5>Online store of the leading mobile operator Vodafone Ukraine, which serves more than 19 million subscribers.</h5>
+                <h5 class="h5">Online store of the leading mobile operator Vodafone Ukraine, which serves more than 19 million subscribers.</h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
                 <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
@@ -147,7 +147,7 @@
                     Goodwine
                     <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
                 </h4>
-                <h5>official online store of the international<br /> brand under which household appliances and dishes are produced</h5>
+                <h5 class="h5">official online store of the international<br /> brand under which household appliances and dishes are produced</h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
                 <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
